--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <div class="container">
     <div class="container-custom">
         <div class="row">
-            <div class="col-4 image-box">
+            <div class="col-4 image-box col-sm-12 ">
                 <img src="https://www.simbrella.com/site/assets/files/1175/we_icon_1.svg" alt="View">
                 <h3>AI &amp; ML based scoring</h3>
                 <p>
                     We determine the credit-worthiness of each client, using behavioral scoring model.
                 </p>
             </div>
-            <div class="col-4 image-box">
+            <div class="col-4 image-box col-sm-12">
                 <img src="https://www.simbrella.com/site/assets/files/1176/we_icon_2.svg" alt="View">
                 <h3>Micro-lending technology</h3>
                 <p>We deliver microlending solution which includes processing, disbursement, repayment, recovery and
                     management of loans.</p>
             </div>
-            <div class="col-4 image-box">
+            <div class="col-4 image-box col-sm-12">
                 <img src="https://www.simbrella.com/site/assets/files/1177/we_icon_3.svg" alt="View">
                 <h3>Big data engine</h3>
                 <p>We use latest advancements in Artificial Intelligence and Machine Learning to maximize our value
@@ -34,12 +34,9 @@
             </div>
         </div>
     </div>
-
-
-
 </div>
 
-</div>
+
 
 <body>
 
